Cambios a errores y más.

--- a/formulario.html
+++ b/formulario.html
@@ -33,8 +33,8 @@
     <h2>Lista de invitados</h2>
 
   </div>
-
-  <script src="../formulario.js"></script>
+<!-- Le cambié la dirección del js porque no agarraba.  -->
+  <script src="./formulario.js"></script> 
 </body>
 
 </html>
